--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
+.idea
 *.iml
-vcs.xml
-modules.xml
-misc.xml
-.gitignore
+out
+gen
+/.apt_generated/
+/.classpath
+/.factorypath
+/.project
+/.settings/
+/.springBeans
 /target/
-
-
+/.gitignore
+/user-profile-analysis.iml
+/.idea
+.DS_Store
+————————————————
+版权声明：本文为CSDN博主「健康平安的活着」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/u011066470/article/details/94395451
